<resources>
    <string name="app_name">Thirdweek</string>
    <string name="btnLogin">登录</string>
    <string name="btnOnceInfo">个人信息</string>
    <string name="passValue">传递简单值1</string>
    <string name="passValue2">传递简单值2</string>
    <string name="passData">传递数据</string>
    <string name="passObject">传递对象</string>
    <string name="passObjectValue">传递对象数据</string>
    <string name="passOther">传递其他</string>
    <string name="phone">打电话</string>
    <string name="message">发短信</string>
    <string name="email">发送邮件</string>
    <string name="web">调用网页</string>
    <string name="startAlarmClock">启动闹钟</string>
    <string name="startTime">启动定时器</string>
    <string name="showClock">显示闹钟</string>
    <string name="lifeCycle">Activity生命周期</string>
</resources>
